Sat Jun  8 19:14:11 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cputctrl.c (ADR_RelocUpdaterCore): Use minus sign for register base
	with negative offset.  Use NOP instruction for second instruction of
	ADRL when possible.
	* option.c (GetOptCCodeAndOptChar): Add.
	(GetCCodeIfThere): Reimplement using switch.
	(Option_CondS): Make use of GetOptCCodeAndOptChar.
	(Option_CondB): Likewise.
	(Option_CondL): Likewise.
	(Option_ADRL): Likewise.
	(Option_CondSP): Add (pre-)UAL checks.  Only warn about P variant when
	keyword is fully detected.

	* unittests/compare/core/include/adr.s: Update for NOP changes.
	Add condition code UAL test.

Sat Jun  8 17:56:35 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/Makefile.in: Let asasm generate dependency file
	and use it.  Use vpath instead of VPATH.
	* unittests/reloc/Makefile.in: Likewise.

Sun Jun  2 23:12:53 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* option.c (Option_LinkCond): Reimplement using ParseState code.
	* m_cpuctrl.c (m_bx): Emit R_ARM_V4BX.

	unittests/compare:
	* Makefile.in: Run tests with ELF output as well.
	* core/instr_b_bx_bxj_bl_blx.s: Add R_ARM_V4BX relocs in reference.

Sun Jun  2 18:46:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* decode.c: Drop include main.h.
	* filestack.c (StoreFileName): Rename to FS_StoreFileName.
	(CachedFile_Lookup): Follow StoreFileName rename.
	(FS_PushFilePObject): Likewise.
	* filestack.h (FS_StoreFileName): Add.
	* directive_file.c (c_incbin): Add call FS_StoreFileName.
	* eval.c (Eval_Unop): Likewise for eOp_FLoad, eOp_FExec, eOp_FSize
	and eOp_FAttr.
	* decode.c: Update comment.

Sun Jun  2 18:09:07 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.c (ARM_Reloc_Types, oARMRelocTypes, Reloc_GetRelocValue,
	c_reloc): Add.
	(Reloc_CreateInternal): Support relocation replacement.  Add more
	asserts.
	* reloc.h (Reloc_State_t): Add offsetForExplicitReloc field.